fix align

--- a/src/FileManagement/Screens/FileDetailViewer/styles.less
+++ b/src/FileManagement/Screens/FileDetailViewer/styles.less
@@ -42,7 +42,7 @@
     margin-bottom: 15px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    text-align: center;
     flex-direction: column;
 
     img {
